# Advanced-Investment-Tool

./: .replit  README.md  build.sh  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start-dev.sh  start-production.sh  tailwind.config.ts
attached_assets/: F-F_Research_Data_5_Factors_2x3_1760297236648.csv  Pasted--1-Objective-Rebuild-the-current-Utility-Explorer-into-a-dynamic-pedagogical-simulator-that-sh-1760355839354_1760355839355.txt  Pasted--Goal-Build-an-interactive-visual-module-called-Utility-SDF-inside-the-Advanced-Investments-Int-1760354636672_1760354636672.txt  Pasted--Goal-Build-the-Anomalies-Fama-French-Module-for-the-Advanced-Investments-Interactive-Lab-This-1760297349847_1760297349847.txt  Pasted--Goal-Create-a-new-module-study-flashcards-that-generates-and-displays-interactive-flashcards-f-1760362218477_1760362218477.txt  Pasted--Goal-Modify-the-Risk-module-so-the-user-can-manually-adjust-skewness-and-kurtosis-and-optionall-1760366811734_1760366811735.txt  Pasted--Goal-Rebuild-and-enrich-the-Theory-Tab-for-the-first-two-modules-Portfolio-Theory-Mean-Varian-1760358305253_1760358305254.txt  Pasted--Goal-Rebuild-and-extend-the-Risk-module-to-1-include-a-full-first-principles-Theory-tab-align-1760361101972_1760361101973.txt  Pasted--Goal-Rebuild-the-Theory-tab-for-the-Utility-SDF-module-It-should-explain-in-first-principl-1760360693289_1760360693289.txt  Pasted--Goal-Refactor-and-debug-the-existing-Fixed-Income-Derivatives-module-to-correctly-process-the--1760354435644_1760354435645.txt  (+18 more)
client/: index.html
(+44 files in other folders)
