[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.3",
    "fastapi>=0.119.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]
